[tool.poetry]
name = "zeta"
version = "0.1.0"
description = "africalim project"
authors = ["Senkhosi Simelane <senkhxsi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cult-cargo = "^0.1.3"
kubernetes = "^31.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^23.0"

[tool.poetry.scripts]
greet = "zeta.apps.greeter.click_greeter_2:runit"
predict = "zeta.apps.predict_vis.predict_vis:runit"